@@ -42,7 +42,9 @@ my $prereqs  = {
     'Module::Pluggable' => '5.1',
     'Moo' => '2.000001',
     'Plack' => '1.0032',
+    'Plack::Middleware::Debug' => '0.16',
     'Plack::Middleware::Deflater' => '0.08',
+    'Plack::Middleware::FixMissingBodyInRedirect' => '0.12',
     'Plack::Middleware::LogErrors' => '0.001',
     'Plack::Middleware::Session' => '0.21',
     'Pod::Xhtml' => '1.61',
@@ -57,6 +59,7 @@ my $prereqs  = {
     'YAML::Tiny' => '1.64',
     'local::lib' => '2.000014',
     'namespace::autoclean' => '0.22',
+    'namespace::clean' => '0.25',
     'perl' => '5.010001',
     'strictures' => '1.005004',
     'warnings::illegalproto' => '0.001002'
