@@ -12,7 +12,9 @@ requires "JSON::MaybeXS" => "1.002006";
 requires "Module::Pluggable" => "5.1";
 requires "Moo" => "2.000001";
 requires "Plack" => "1.0032";
+requires "Plack::Middleware::Debug" => "0.16";
 requires "Plack::Middleware::Deflater" => "0.08";
+requires "Plack::Middleware::FixMissingBodyInRedirect" => "0.12";
 requires "Plack::Middleware::LogErrors" => "0.001";
 requires "Plack::Middleware::Session" => "0.21";
 requires "Pod::Xhtml" => "1.61";
@@ -27,6 +29,7 @@ requires "Web::Simple" => "0.030";
 requires "YAML::Tiny" => "1.64";
 requires "local::lib" => "2.000014";
 requires "namespace::autoclean" => "0.22";
+requires "namespace::clean" => "0.25";
 requires "perl" => "5.010001";
 requires "strictures" => "1.005004";
 requires "warnings::illegalproto" => "0.001002";
