@@ -21,7 +21,9 @@ JSON::MaybeXS          = 1.002006
 Module::Pluggable      = 5.1
 Moo                    = 2.000001
 Plack                  = 1.0032
+Plack::Middleware::Debug     = 0.16
 Plack::Middleware::Deflater  = 0.08
+Plack::Middleware::FixMissingBodyInRedirect = 0.12
 Plack::Middleware::LogErrors = 0.001
 Plack::Middleware::Session   = 0.21
 Pod::Xhtml             = 1.61
