@@ -15,7 +15,7 @@ with q(App::Doh::Role::Templates);
 has '+moniker'   => default => 'html';
 
 has 'formatters' => is => 'lazy', isa => HashRef[Object],
-   builder       => sub { load_components 'View::HTML', $_[ 0 ]->usul };
+   builder       => sub { load_components $_[ 0 ]->usul, 'View::HTML' };
 
 has 'type_map'   => is => 'lazy', isa => HashRef, builder => sub {
    my $self = shift; my $map = { htm => 'html', html => 'html' };
